Added images, modified colors and cards.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
             <nav class="navbar">
                 <div class="logo">
-                <h2>Seladrab</h1>
-                <h5>Cleaning Services</h5>
+                <h2>R.F</h2>
+                <h5>Pavement & Construction</h5>
                 </div>
                 <a href="#" class="toggle-button">
                     <span class="bar"></span>
@@ -31,8 +31,8 @@
     </header>
     <section class="hero-section">
         <div class="title">
-        <h1>15 <span>YEARS</span> OF EXPERIENCE IN EVERY SERVICE WE PROVIDE</h1>
-        <p>A Cleaning Company that offers professional services</p>
+        <h1>THE VERY BEST IN CONSTRUCTION & PAVEMENT</h1>
+        <p>Construction Company Based in the Bay Area</p>
         </div>
         <div class="btn">
             <a href="#">Our Services</a>
@@ -43,64 +43,35 @@
     <section class="about">
         <div class="title">
             <h3>WHY CHOOSE US</h3>
-            <p>The latest in house cleaning</p>
         </div>
             <div class="firstgrid">
                 <div class="card">
                     <div class="content">
-                        <span class="dot"></span>
-                    <h4>Secure Services</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, consectetur!</p>
+                        <img src="img/img1.jpeg" alt="img1">
+                    <h5>Garage Pavement</h5>
+                    <p>We provide pavement services for garages, and with decoration or without decoration.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="content">
-                        <span class="dot"></span>
-                    <h4>Secure Services</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, consectetur!</p>
+                        <img src="img/img2.jpeg" alt="img2">
+                    <h5>Backyard Tiling</h5>
+                    <p>We also do tiling for floors and benches in your front yard or back yard.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="content">
-                        <span class="dot"></span>
-                    <h4>Secure Services</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, consectetur!</p>
+                        <img src="img/img3.jpeg" alt="img3">
+                    <h5>Clear Previous Work</h5>
+                    <p>We also clear any previous work as well. We have our own equipment to get this done.</p>
                     </div>
                 </div>
         </div>
-    </section>
-    <section class="services">
-        <div class="title">
-            <h3>WHY CHOOSE US</h3>
-            <p>The worlds latest in house cleaning</p>
-        </div>
-            <div class="secondgrid">
-                <div class="card2">
-                    <div class="content">
-                        <span class="dot"></span>
-                        <h4>Secure Services</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, consectetur!</p></div>
-                </div>
-                <div class="card2">
-                    <div class="content">
-                        <span class="dot"></span>
-                        <h4>Secure Services</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, consectetur!</p></div>
-                </div>
-                <div class="card2">
-                    <div class="content">
-                        <span class="dot"></span>
-                        <h4>Secure Services</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, consectetur!</p></div>
-                </div>
-                </div>
-            </div>
-        </div>
-        
+    </section>       
     </section>
     <section class="advertise-section">
-        <p>IS YOUR HOME OR APARTMENT DIRTY?</p>
-        <p>PLEASE CALL US: 510-999-9999</p>
+        <p>DO YOU NEED A QUOTE?</p>
+        <p>PLEASE CALL US: 510-776-1550</p>
     </section>
     <section class="review-section">
         <div class="title">
@@ -171,7 +142,7 @@
     </section>
      <section class="form-section">
             <div class="class-title">
-                <h3>Request a <span>Call Back</span></h3>
+                <h3>Get a <span>Quote!</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
          <form>
@@ -183,7 +154,7 @@
          </form>
      </section>
      <footer>
-         <p>&#9400; Copyright <span id="date"></span> <span>Seladrab Cleaning Services</span> All Rights Reserved</p>
+         <p>&#9400; Copyright <span id="date"></span> <span>R&F Construction and Pavement</span> All Rights Reserved</p>
      </footer>
     
 
