--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                     <ul>
                     <li><a href="#" class="link">HOME</a></li>
                     <li><a href="#" class="link">ABOUT US</a></li>
-                    <li><a href="#" class="link">SERVICES</a></li>
+                    <li><a href="#" class="link">REVIEWS</a></li>
                     <li><a href="#" class="link">CONTACT US</a></li>
+                    <li><div id="google_translate_element"></div></li>
                     </ul>
                 </div>
             </nav>
@@ -38,7 +39,6 @@
             <a href="#">Our Services</a>
             <a href="#">Book Now</a>
         </div>
-        
     </section>
     <section class="about">
         <div class="title">
@@ -158,9 +158,8 @@
      </footer>
     
 
-
-
-<script src="https://kit.fontawesome.com/008a7e930e.js" crossorigin="anonymous"></script>
 <script src="app.js"></script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script src="https://kit.fontawesome.com/008a7e930e.js" crossorigin="anonymous"></script>
 </body>
 </html>
