--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
                 </a>
                 <div class="navbar-links">
                     <ul>
-                    <li><a href="#" class="link">HOME</a></li>
-                    <li><a href="#" class="link">ABOUT US</a></li>
-                    <li><a href="#" class="link">REVIEWS</a></li>
-                    <li><a href="#" class="link">CONTACT US</a></li>
+                    <li><a href="#hero" class="link">HOME</a></li>
+                    <li><a href="#choose" class="link">ABOUT US</a></li>
+                    <li><a href="#review" class="link">REVIEWS</a></li>
+                    <li><a href="#form" class="link">CONTACT US</a></li>
                     <li><div id="google_translate_element"></div></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
-    <section class="hero-section">
+    <section class="hero-section" id="hero">
         <div class="title">
         <h1>THE VERY BEST IN CONSTRUCTION & PAVEMENT</h1>
         <p>Construction Company Based in the Bay Area</p>
         </div>
         <div class="btn">
-            <a href="#">Our Services</a>
-            <a href="#">Book Now</a>
+            <a href="#choose">Our Services</a>
+            <a href="#form">Book Now</a>
         </div>
     </section>
-    <section class="about">
+    <section class="about" id="choose">
         <div class="title">
             <h3>WHY CHOOSE US</h3>
         </div>
@@ -73,7 +73,7 @@
         <p>DO YOU NEED A QUOTE?</p>
         <p>PLEASE CALL US: 510-776-1550</p>
     </section>
-    <section class="review-section">
+    <section class="review-section" id="review">
         <div class="title">
             <h3>Our Guests Love Us</h3>
             <p>See What they have to say!</p>
@@ -140,7 +140,7 @@
             </div>
         </div>
     </section>
-     <section class="form-section">
+     <section class="form-section" id="form">
             <div class="class-title">
                 <h3>Get a <span>Quote!</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
