Added domain name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <nav class="navbar">
                 <div class="logo">
                 <h2>R.F</h2>
-                <h5>Pavement & Construction</h5>
+                <h5>Ravers & Hauling</h5>
                 </div>
                 <a href="#" class="toggle-button">
                     <span class="bar"></span>
@@ -145,7 +145,8 @@
                 <h3>Get a <span>Quote!</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-         <form>
+         <form action="https://formspree.io/f/meqnobzl"
+         method="POST">
              <input type="name" placeholder="Name">
              <input type="email" placeholder="Email">
              <input type="tel" placeholder="Telephone">
