Done with Reviews Section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
     <section class="advertise-section">
         <p>DO YOU NEED A QUOTE?</p>
-        <p>PLEASE CALL US: 510-776-1550</p>
+        <p>PLEASE CALL US: 510-230-5491</p>
     </section>
     <section class="review-section" id="review">
         <div class="title">
@@ -81,11 +81,11 @@
         <div class="container-review">
             <div class="client-reviews">
                 <div class="review">
-                    <span class="dot"></span>
+                    <img class="review-image" src="img/reviewpicture1.jpeg" alt="">
                 </div>
-                <div class="section review">
-                    <h3>Sergio M.</h3>
-                    <h5>Hayward, CA</h5>
+                <div class="section-review">
+                    <h3>Claudio M.</h3>
+                    <h5>Fremont, CA</h5>
                     <div class="rating">
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
@@ -93,18 +93,16 @@
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                     </div>
-                    <i>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, libero!
-                         Commodi, tempore facere consequatur officia, 
-                         numquam quidem totam vitae itaque culpa."</i>
+                    <p>"When I showed them an image on how I wanted the pavement to be, they wasted no time and they got this one pretty quickly`!"</p>
     
                 </div>
             </div>
             <div class="client-reviews">
                 <div class="review">
-                    <span class="dot"></span>
+                    <img class="review-image" src="img/reviewpicture2.jpeg" alt="">
                 </div>
-                <div class="section review">
-                    <h3>Sergio M.</h3>
+                <div class="section-review">
+                    <h3>Francesco S.</h3>
                     <h5>Hayward, CA</h5>
                     <div class="rating">
                         <i class="fas fa-star star"></i>
@@ -113,18 +111,16 @@
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                     </div>
-                    <i>"Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Rem, libero! Commodi, tempore facere consequatur officia,
-                         numquam quidem totam vitae itaque culpa."</i>
+                    <p>"The Tiling that they did on my grandmothers's backyard was AMAZING! Really Cheap Prices Too!"</p>
     
                 </div>
             </div>
             <div class="client-reviews">
                 <div class="review">
-                    <span class="dot"></span>
+                    <img class="review-image" src="img/reviewpicture3.jpeg" alt="">
                 </div>
-                <div class="section review">
-                    <h3>Sergio M.</h3>
+                <div class="section-review">
+                    <h3>Valeria R.</h3>
                     <h5>Hayward, CA</h5>
                     <div class="rating">
                         <i class="fas fa-star star"></i>
@@ -133,9 +129,7 @@
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                     </div>
-                    <i>"Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Rem, libero! Commodi, tempore facere consequatur officia, 
-                        numquam quidem totam vitae itaque culpa."</i>
+                    <p>"The last company I used really messed up my backyard. Thankfully I found these guys who took care of the mistake!"</p>
                 </div>
             </div>
         </div>
