--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         </div>
     </header>
     <section class="hero-section" id="hero">
+        <div class="video">
+            <video loop muted autoplay preload="auto">
+                <source src="img/bannervid.mp4" type="video/mp4">
+            </video>
+        </div>
         <div class="title">
         <h1>THE VERY BEST IN CONSTRUCTION & PAVEMENT</h1>
         <p>Construction Company Based in the Bay Area</p>
