--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                     </div>
-                    <p>"When I showed them an image on how I wanted the pavement to be, they wasted no time and they got this one pretty quickly`!"</p>
+                    <p>"When I showed them an image on how I wanted the pavement to be, they wasted no time and they got this one pretty quickly!"</p>
     
                 </div>
             </div>
@@ -142,7 +142,6 @@
      <section class="form-section" id="form">
             <div class="class-title">
                 <h3>Get a <span>Quote!</span></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
          <form action="https://formspree.io/f/meqnobzl"
          method="POST">
