Corrected the Name

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
             <nav class="navbar">
                 <div class="logo">
-                <h2>R.F</h2>
-                <h5>Ravers & Hauling</h5>
+                <h2>P.F</h2>
+                <h5>Pavers & Hauling</h5>
                 </div>
                 <a href="#" class="toggle-button">
                     <span class="bar"></span>
